--- a/css/style.css
+++ b/css/style.css
@@ -15,5 +15,38 @@ Grey dark 2: #777
 Grey dark 3: #999
 
 */
+html {
+  font-size: 62.5%; }
+
+* {
+  margin: 0;
+  padding: 0; }
+
 body {
-  font-family: "Open Sans", sans-serif; }
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400; }
+
+.header {
+  width: 100%;
+  height: 10vh;
+  display: flex;
+  justify-content: space-between;
+  padding: 4rem;
+  align-items: center; }
+  .header__logo img {
+    width: 80px; }
+  .header__search-input {
+    width: 30rem;
+    padding: 1rem 2rem;
+    border: none;
+    background-color: #e9e8e8;
+    border-radius: 2rem; }
+  .header__right {
+    display: flex; }
+    .header__right-icon {
+      fill: #707070;
+      width: 3rem;
+      margin: 0 2rem; }
+    .header__right .header__user-img {
+      width: 10rem;
+      border-radius: 50%; }
